# Joplin-dictate

./: .gitignore  Cargo.toml  README.md  joplin-dictate-gui.py  joplin-dictate.sh
.github/workflows/: ci.yml
src/: lib.rs
