[package]
name = "joplin-dictate"
version = "0.3.2"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
dirs = "6"
gtk4 = "0.10"
nix = { version = "0.30", features = ["signal"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
urlencoding = "2"
which = "8"

[lib]
name = "joplin_dictate"
path = "src/lib.rs"

[[bin]]
name = "joplin-dictate"
path = "src/bin/joplin-dictate.rs"

[[bin]]
name = "joplin-dictate-gui"
path = "src/bin/joplin-dictate-gui.rs"
